# ethan

./: .env.example  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  cards_template.csv  cards_template_excel.xlsx
src/: db.rs  main.rs
